--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,13 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "dompurify",
+              "html2canvas",
+              "rgbcolor",
+              "raf",
+              "core-js"
+            ],
             "outputPath": "dist/sibut-mc-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
